$Id: ChangeLog,v 1.177 2007-11-08 02:20:18 cmatsuoka Exp $

Stable versions
---------------

2.5.0 ():
	- remove DMP-specific effect from MOD loader
	- extend full sample loops to Noisetracker and Startrekker
	- FLT loader recognizes Startrekker FLTM modules (only PCM channels)
	- implement support for Startrekker/ADSC AM synth instruments
	- fixed cast to signed type in finetune display
	- fixed Protracker 3 IFFMODL loader (process VERS chunk manually)
	- added support to full sample loops in the Protracker 3 loader

2.4.1 (20071029):
	- fixed portamento after keyoff problem in metamorph_part_ii.xm
	  where new note is not recognized (reported by Adric Riedel)
	- implement Protracker-style sample loops: first play entire sample,
	  then play the loop (needed to play MeNoWantMiseria.mod correctly,
	  reported by Adric Riedel)
	- fixed finetune test in UNIC Tracker detection to prevent false
	  positive with all that she wants.mod (reported by Adric Riedel)
	- fixed test for ?CHN and ??CH TakeTracker/FastTracker2 modules
	- fixed data type in the XM loader to work in 64-bit systems
	- don't ignore effect on event with invalid instrument (fixes tempo
	  in 39.mod pos 11, reported by Adric Riedel)
	- removed restrictive tests for Ultimate Soundtracker (false negative
	  in Karsten Obarski's sleepwalk and others, reported by Adric Riedel)
	- minimum sample size changed from 5 to 4 bytes, childhood.it actually
	  has 4 byte samples (reported by Adric Riedel)
	- cut effect doesn't retrigger sample (fixes Comic Bakery Remix pos 1
	  ch 3, reported by Adric Riedel)
	- allow period 162 in ST mods (for blueberry.mod UST, reported by AR)
	- fixed period interpolation using real log function instead of table
	  
2.4.0 (20071025):
	- added Oktalyzer note slide and fine note slide effects
	- added Oktalyzer arpeggio 3, arpeggio 4 and arpeggio 5 effects
	- added MED synth programmable arpeggio commands ARP and ARE
	- added MED synth vibrato commands VBS, VBD and VWF